<resources>
    <string name="app_name">ÇÖMÜ Airlines</string>
    <string name="giris">Giriş</string>
    <string name="kaydol">Kaydol</string>
    <string name="parola">Parola</string>
    <string name="parolatekrar">Parola Tekrar</string>
    <string name="todo">TODO</string>
    <string name="kullanici_ad">Ad</string>
    <string name="kullanici_soyad">Soyad</string>
    <string name="kullanici_e_mail">E-mail</string>
    <string name="ikametgah">Yaşadığı Şehir</string>
    <string name="loginkullanici_email_or_username">Kullanıcı Adı veya E-mail</string>
    <string name="kullanici_nickname">Yaş</string>
    <string name="hesab_n_z_yok_mu_hemen_kaydolun">Hesabınız yok mu? Hemen Kaydolun</string>
    <string name="parolami_unuttum">Parolamı unuttum</string>
    <string name="hos_geldin_user_id">Hos geldin /USER</string>
    <string name="admin_giris">Admin Girişi İçin Tıklayınız</string>
    <string name="uyelık_tipi">Üyelik Tipi</string>
    <string name="rezerve">Rezerve Et</string>
    <string name="cinsiyet">Cinsiyet</string>
    <string-array name="cinsiyet_array">

        <item>Erkek</item>
        <item>Kadın</item>
    </string-array>

    <string-array name="cities_array">
        <item>Ankara</item>
        <item>İstanbul</item>
        <item>İzmir</item>
        <item>Antalya</item>
        <item>Bursa</item>
        <item>Van</item>
        <item>Trabzon</item>
        <item>Çanakkale</item>
        <item>Gaziantep</item>
    </string-array>

    <string name="bilet_detaylari">Bilet Detayları</string>
    <string name="odemeyap">Ödeme Yap</string>
    <string name="bilet_ara">Bilet Ara</string>
    <string name="bilet_listele">Biletlerim</string>
    <string name="rezerve_biletlerim">Rezerve Biletlerim</string>
    <string name="odemeTittle">Ödeme</string>
    <string name="kaydolTittle">Kaydol</string>
    <string name="secimiKaydet">Seçimi Onayla</string>
    <string name="koltuk_bilgileri">Koltuk Seçimi</string>
    <string name="ucus_ara">Uçuş Ara</string>
    <string name="fiyat_giriniz">Fiyat Giriniz</string>
    <string name="ucus_no">Uçuş No</string>
    <string name="donusBileti">Dönüş Bileti</string>
    <string name="rezerveBiletKalanSure">Kalan Süre:</string>

</resources>