<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/flat_font"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">
    <LinearLayout
        android:id="@+id/TopBackgroundLayout"
        android:layout_width="match_parent"
        android:layout_height="294dp"
        android:background="@drawable/plane_design_outofapp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/comulogoyeni"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="-132dp"
            tools:layout_editor_absoluteY="-67dp" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/kaydolmascroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/scrollLinearLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/adminGirisTittle"
                android:layout_width="313dp"
                android:layout_height="57dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:autoSizeMinTextSize="50sp"
                android:background="#fffdfe"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/kaydolTittle"
                android:textColor="#246395"
                android:textColorHighlight="#FFFDFE"
                android:textSize="40sp"
                android:visibility="visible"
                tools:layout_editor_absoluteX="89dp"
                tools:layout_editor_absoluteY="16dp" />

            <EditText
                android:id="@+id/ad"
                android:layout_width="365dp"
                android:layout_height="73dp"

                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints="true"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="#E3F6FF"
                android:backgroundTintMode="src_atop"
                android:contextClickable="true"
                android:cursorVisible="true"
                android:ems="10"
                android:hapticFeedbackEnabled="true"
                android:hint="@string/kullanici_ad"
                android:inputType="text"
                android:isScrollContainer="false"
                android:scrollbars="none"
                android:singleLine="true"
                android:textAllCaps="false"
                android:textIsSelectable="false"
                android:textSize="20sp"
                android:visibility="visible"
                app:barrierAllowsGoneWidgets="false"
                app:chainUseRtl="false"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/soyad"
                android:layout_width="365dp"
                android:layout_height="73dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:autofillHints="true"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="#E3F6FF"
                android:backgroundTintMode="src_atop"
                android:contextClickable="true"
                android:cursorVisible="false"

                android:ems="10"
                android:hapticFeedbackEnabled="true"
                android:hint="@string/kullanici_soyad"
                android:inputType="text"
                android:isScrollContainer="false"
                android:scrollbars="none"
                android:singleLine="true"
                android:textAllCaps="false"
                android:textIsSelectable="false"
                android:textSize="20sp"
                android:visibility="visible"
                app:barrierAllowsGoneWidgets="false"
                app:chainUseRtl="false"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/UsernameText1"
                android:layout_width="365dp"
                android:layout_height="73dp"
                android:layout_marginTop="10dp"
                android:autofillHints="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="#E3F6FF"
                android:backgroundTintMode="src_atop"
                android:contextClickable="true"
                android:cursorVisible="false"
                android:ems="10"
                android:hapticFeedbackEnabled="true"
                android:hint="@string/kullanici_e_mail"
                android:inputType="text"
                android:isScrollContainer="false"
                android:scrollbars="none"
                android:singleLine="true"
                android:textAllCaps="false"
                android:textIsSelectable="false"
                android:textSize="20sp"
                android:visibility="visible"
                app:barrierAllowsGoneWidgets="false"
                app:chainUseRtl="false"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/yas"
                android:layout_width="365dp"
                android:layout_height="73dp"
                android:layout_marginTop="10dp"
                android:autofillHints="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="#E3F6FF"
                android:backgroundTintMode="src_atop"
                android:contextClickable="true"
                android:cursorVisible="false"
                android:ems="10"
                android:hapticFeedbackEnabled="true"
                android:hint="@string/kullanici_nickname"
                android:inputType="text"
                android:isScrollContainer="false"
                android:scrollbars="none"
                android:singleLine="true"
                android:textAllCaps="false"
                android:textIsSelectable="false"
                android:textSize="20sp"
                android:visibility="visible"
                app:barrierAllowsGoneWidgets="false"
                app:chainUseRtl="false"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/Ikametgah"
                android:layout_width="365dp"
                android:layout_height="73dp"
                android:layout_marginTop="10dp"
                android:autofillHints="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/edit_text_background"
                android:backgroundTint="#E3F6FF"
                android:backgroundTintMode="src_atop"
                android:contextClickable="true"
                android:cursorVisible="false"
                android:ems="10"
                android:hapticFeedbackEnabled="true"
                android:hint="@string/ikametgah"
                android:inputType="text"
                android:isScrollContainer="false"
                android:scrollbars="none"
                android:singleLine="true"
                android:textAllCaps="false"
                android:textIsSelectable="false"
                android:textSize="20sp"
                android:visibility="visible"
                app:barrierAllowsGoneWidgets="false"
                app:chainUseRtl="false"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/Parola2"
                android:layout_width="365dp"
                android:layout_height="73dp"
                android:layout_marginTop="10dp"
                android:allowUndo="true"
                android:autofillHints=""
                android:backgroundTint="#E3F6FF"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:forceHasOverlappingRendering="false"
                android:layout_gravity="center_horizontal"
                android:hint="@string/parola"
                android:hyphenationFrequency="none"
                android:inputType="textPassword"
                android:isScrollContainer="false"
                android:linksClickable="false"
                android:longClickable="true"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/ParolaTekrar"
                android:layout_width="365dp"
                android:layout_height="73dp"
                android:layout_marginTop="10dp"
                android:allowUndo="true"
                android:autofillHints=""
                android:layout_gravity="center_horizontal"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:backgroundTint="#E3F6FF"
                android:forceHasOverlappingRendering="false"
                android:hint="@string/parolatekrar"
                android:hyphenationFrequency="none"
                android:inputType="textPassword"
                android:isScrollContainer="false"
                android:linksClickable="false"
                android:longClickable="true"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/cinsiyetSpinner"
                    android:layout_width="365dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#E3F6FF"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="73dp" />



            <Button
                android:id="@+id/JoininButton"
                android:layout_width="365dp"
                android:layout_height="73dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#0D1831"
                android:layout_gravity="center_horizontal"
                android:text="@string/kaydol"
                android:textSize="20sp"

                tools:ignore="VisualLintButtonSize" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>