<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/flat_font"
    android:layout_height="match_parent"
    tools:context=".AdminLoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/TopBackgroundLayout"
        android:layout_width="match_parent"
        android:layout_height="294dp"
        android:background="@drawable/plane_design_outofapp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/comulogoyeni"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="-132dp"
            tools:layout_editor_absoluteY="-67dp" />
    </LinearLayout>


    <TextView
        android:id="@+id/adminGirisTittle"
        android:layout_width="313dp"
        android:layout_height="57dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:autoSizeMinTextSize="50sp"
        android:background="#fffdfe"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text=" Admin Giriş"
        android:textColor="#246395"
        android:textColorHighlight="#FFFDFE"
        android:textSize="40sp"
        android:visibility="visible"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="16dp" />



    <EditText
        android:id="@+id/adminUsernameText"
        android:layout_width="365dp"
        android:layout_height="73dp"
        android:autofillHints="true"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit_text_background"
        android:backgroundTint="#E3F6FF"
        android:backgroundTintMode="src_atop"
        android:contextClickable="true"
        android:cursorVisible="false"
        android:ems="10"
        android:hapticFeedbackEnabled="true"
        android:hint="@string/loginkullanici_email_or_username"
        android:inputType="text"
        android:isScrollContainer="false"
        android:scrollbars="none"
        android:singleLine="true"
        android:textAllCaps="false"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:visibility="visible"
        app:barrierAllowsGoneWidgets="false"
        app:chainUseRtl="false"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="273dp"
        tools:visibility="visible"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/adminParola"
        android:layout_width="365dp"
        android:layout_height="73dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints="true"
        android:background="@drawable/edit_text_background"
        android:backgroundTint="#E3F6FF"
        android:ems="10"
        android:hint="@string/parola"
        android:inputType="textPassword"
        android:isScrollContainer="false"
        android:linksClickable="false"
        android:longClickable="true"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="368dp" />

    <CheckBox
        android:id="@+id/adminBeniHatirla"
        android:layout_width="134dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:buttonTint="#121212"
        android:backgroundTint="#fffdfe"
        android:text="Beni Hatırla "
        android:textColor="#070707"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="464dp"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/adminparolamı_unuttum"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:autoLink="web"
        android:clickable="true"
        android:focusable="true"
        android:onClick="hemenKaydolClicked"
        android:text="@string/parolami_unuttum"
        android:textColor="#000000"
        android:textColorHighlight="#FAF6F6"
        android:textColorHint="#FFFFFF"
        android:textColorLink="@color/white"
        android:textSize="16sp"
        tools:ignore="MissingConstraints,TextSizeCheck"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="530dp" />


    <Button
        android:id="@+id/adminLoginButton"
        android:layout_width="365dp"
        android:layout_height="73dp"
        android:backgroundTint="#246395"
        android:layout_gravity="center_horizontal"
        android:text="@string/giris"
        android:textSize="20sp"
        tools:ignore="MissingConstraints,VisualLintButtonSize"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="605dp" />




</LinearLayout>